src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImgURL__c</fullName>
        <label>ImgURL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Title__c</fullName>
        <label>Professional Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>lek. med.</fullName>
                </value>
                <value>
                    <fullName>lek. stom.</fullName>
                </value>
                <value>
                    <fullName>dr n. med.</fullName>
                </value>
                <value>
                    <fullName>prof. dr hab. n. med.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiologist</fullName>
                </value>
                <value>
                    <fullName>Gynecologist</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Dietician</fullName>
                </value>
                <value>
                    <fullName>Neurologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Of_Birth_From_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Of_Birth__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Date of birth cannot be from future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Number_First_Name_And_Last_Name</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
CONTAINS(&quot;0123456789&quot;,First_Name__c),
CONTAINS(&quot;0123456789&quot;,Name)
)</errorConditionFormula>
        <errorMessage>First Name and Last Name cannot contain a number or special character.</errorMessage>
    </validationRules>
</CustomObject>